--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/angelhackifatigue/backend#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "firebase-admin": "^8.2.0",
-    "twilio": "^3.33.0"
+    "twilio": "^3.33.0",
+    "xml": "^1.0.1"
   }
 }
